--- a/deployment_create_order.yaml
+++ b/deployment_create_order.yaml
@@ -23,10 +23,10 @@ spec:
       # Set labels on the pod.
       # This is used in the deployment selector.
       labels:
-        app: createcorder
+        app: createorder
     spec:
       containers:
-        - name: createcorder
+        - name: createorder
           image: anirudhya/create_order:latest
           ports: 
           - containerPort: 5000
@@ -34,10 +34,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: createcorder-service
+  name: createorder-service
 spec:
   selector:
-    app: createcorder
+    app: createorder
   ports:
   - protocol: "TCP"
     port: 5002
